--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server.js",
-    "start": "node server.js"
+    "server": "node server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
